javadoc additions